# autopack

./: .travis.yml  CHANGELOG.md  README.md  autopack.cabal  stack.yaml
.github/workflows/: ci.yml
src/: Autopack.hs
